--- a/bank-client/package.json
+++ b/bank-client/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "@walletconnect/ethereum-provider": "^2.20.2",
     "@walletconnect/modal": "^2.7.0",
     "@web3modal/ethers": "^5.1.11",
     "@web3modal/standalone": "^2.4.3",
     "ethers": "^6.14.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.7",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
